# Terror-Videogame

./: .gitignore  Boton.cpp  Boton.h  CMakeLists.txt  Caja.cpp  Caja.h  Definiciones.h  EBO.cpp  EBO.h  Escenario.cpp  Escenario.h  Lampara.cpp  Lampara.h  Menu.cpp  Menu.h  Menu2D.cpp  Menu2D.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Monstruo.cpp  Monstruo.h  MonstruoManager.cpp  MonstruoManager.h  Nota.cpp  Nota.h  Puerta.cpp  Puerta.h  README.md  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  TexturaUtils.cpp  TexturaUtils.h  VBO.cpp  VBO.h  main.cpp
models/: estanteria.mtl
models/Abanico/: Abanico.mtl
models/Caja/: Caja.mtl
models/Cajon/: Cajon.mtl
models/Chair/: Chair.mtl
models/Crowbar/: Lever.mtl  Lever2.mtl
models/Crowbar/CrowbarBox/: CrowbarBox.mtl
models/Ending/: The_End.mtl
models/Maceta/: Maceta.mtl
models/MaquinaExpendedora/: MaquinaExpendedora.mtl
models/MesaTrabajo/: MesaTrabajo.mtl
models/Monstruo/: Monstruo_corre.glb  Monstruo_idle.glb  Monstruo_quieto.glb  Monstruo_running.glb
models/Pantalla/: Pantalla.mtl
models/Papeles/: Papel1.mtl  Papel2.mtl  Papel3.mtl
models/Relog/: Relog.mtl
models/Silla/: Silla.mtl
models/Whiteboard/: WhiteBoard.mtl
models/keyboard/: Teclado.mtl
models/pencilcup/: Tasa.mtl
models/trashcan/: Papelera.mtl
shaders/: default.frag  default.vert  escenario.frag  escenario.vert  luz.frag  luz.vert  model.frag  model.vert  monstruo.frag  monstruo.vert  skybox.frag  skybox.vert  texture.frag  texture.vert
